<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_fifty"
        android:background="@color/metro_yellow"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_ten"
        android:text="@string/driver_assigned"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_thirty" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_fifteen"
        android:layout_marginLeft="@dimen/dp_ten"
        android:layout_marginRight="@dimen/dp_ten"
        android:layout_marginTop="@dimen/dp_twenty"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="100dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfilePic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher"
                app:civ_border_color="@color/metro_yellow"
                app:civ_border_width="2dp" />

            <ProgressBar
                android:indeterminate="true"
                android:id="@+id/pbLoadImage"
                style="?android:attr/progressBarStyle"
                android:layout_centerInParent="true"
                android:layout_height="@dimen/dp_fifty"
                android:layout_width="@dimen/dp_fifty"/>

        </RelativeLayout>

        <!--driver name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_thirty"
            android:text="@string/driver_name"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvDriverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/driver_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_twenty" />

        <!-- contact no -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_thirty"
            android:text="@string/contact_no"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvContactNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/contact_no"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_twenty" />

        <!-- car model -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_thirty"
            android:text="@string/car_model"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvCarModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/car_model"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_twenty" />

        <!-- plate no -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_thirty"
            android:text="@string/plate_no"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvPlateNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/plate_no"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_twenty" />

    </LinearLayout>


</LinearLayout>