<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_fifty"
        android:background="@color/metro_yellow"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_ten"
        android:text="@string/register_car"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_thirty" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_fifteen"
            android:layout_marginLeft="@dimen/dp_ten"
            android:layout_marginRight="@dimen/dp_ten"
            android:layout_marginTop="@dimen/dp_forty"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlAddImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="@dimen/dp_twenty"
                android:layout_marginLeft="@dimen/dp_five"
                android:layout_marginRight="@dimen/dp_five"
                android:background="@drawable/add_car_image_border"
                android:clickable="true">

                <ImageView
                    android:id="@+id/ivAddCarImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/tvAddCarImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="@dimen/dp_ten"
                    android:drawableTop="@drawable/add_car_image"
                    android:text="@string/add_car_image"
                    android:textSize="@dimen/sp_twenty" />

                <ImageView
                    android:id="@+id/ivDeleteImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/cancel"
                    android:visibility="gone" />

                <ProgressBar
                    android:indeterminate="true"
                    android:id="@+id/pbLoadImage"
                    style="?android:attr/progressBarStyle"
                    android:layout_centerInParent="true"
                    android:progressDrawable="@drawable/custom_progressbar_color"
                    android:layout_height="@dimen/dp_fifty"
                    android:layout_width="@dimen/dp_fifty"/>

            </RelativeLayout>


            <!-- car model -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_ten"
                android:theme="@style/FieldsStyle"
                app:hintTextAppearance="@style/FloatingLabelStyle">

                <EditText
                    android:id="@+id/etCarModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_model"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:textColor="@android:color/black"
                    app:customEditTextFont="Roboto-Thin.ttf" />

            </android.support.design.widget.TextInputLayout>

            <!-- plate no -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_ten"
                android:theme="@style/FieldsStyle"
                app:hintTextAppearance="@style/FloatingLabelStyle">

                <EditText
                    android:id="@+id/etPlateNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plate_no"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:textColor="@android:color/black"
                    app:customEditTextFont="Roboto-Thin.ttf" />

            </android.support.design.widget.TextInputLayout>

            <!-- car description -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_ten"
                android:theme="@style/FieldsStyle"
                app:hintTextAppearance="@style/FloatingLabelStyle">

                <EditText
                    android:id="@+id/etDescripton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:textColor="@android:color/black"
                    app:customEditTextFont="Roboto-Thin.ttf" />

            </android.support.design.widget.TextInputLayout>

            <!-- capacity -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_ten"
                android:theme="@style/FieldsStyle"
                app:hintTextAppearance="@style/FloatingLabelStyle">

                <EditText
                    android:id="@+id/etCapacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/capacity"
                    android:inputType="number"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:textColor="@android:color/black"
                    app:customEditTextFont="Roboto-Thin.ttf" />

            </android.support.design.widget.TextInputLayout>

            <!-- rate per 3 hours -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_ten"
                android:theme="@style/FieldsStyle"
                app:hintTextAppearance="@style/FloatingLabelStyle">

                <EditText
                    android:id="@+id/etRatePer3Hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rate_per_3_hours"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    app:customEditTextFont="Roboto-Thin.ttf" />

            </android.support.design.widget.TextInputLayout>

            <!-- rate per 10 hours -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_ten"
                android:theme="@style/FieldsStyle"
                app:hintTextAppearance="@style/FloatingLabelStyle">

                <EditText
                    android:id="@+id/etRatePer10Hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rate_per_10_hours"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    app:customEditTextFont="Roboto-Thin.ttf" />

            </android.support.design.widget.TextInputLayout>

            <!--  excess rate -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_ten"
                android:theme="@style/FieldsStyle"
                app:hintTextAppearance="@style/FloatingLabelStyle">

                <EditText
                    android:id="@+id/etExcess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/excess_rate"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    app:customEditTextFont="Roboto-Thin.ttf" />

            </android.support.design.widget.TextInputLayout>

            <com.rey.material.widget.Spinner
                android:id="@+id/spnrPurpose"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/dp_ten"
                android:layout_height="wrap_content"
                app:spn_arrowColor="@color/metro_yellow"
                app:spn_labelEnable="true"
                app:spn_arrowSize="@dimen/dp_ten"
                app:spn_arrowPadding="@dimen/sp_ten"
                app:spn_arrowSwitchMode="true"
                app:spn_labelTextColor="@color/metro_yellow"
                app:spn_arrowAnimDuration="@android:integer/config_shortAnimTime"
                app:spn_popupItemAnimOffset="60"
                app:spn_label="@string/purpose"
                app:spn_arrowInterpolator="@android:anim/decelerate_interpolator"
                app:spn_popupItemAnimation="@anim/abc_grow_fade_in_from_bottom"
                app:rd_style="@style/Material.Drawable.Ripple.Wave"
                android:dropDownWidth="match_parent"/>

            <com.rey.material.widget.Spinner
                android:id="@+id/spnrType"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/dp_ten"
                android:layout_height="wrap_content"
                app:spn_arrowColor="@color/metro_yellow"
                app:spn_labelEnable="true"
                app:spn_arrowSize="@dimen/dp_ten"
                app:spn_arrowPadding="@dimen/sp_ten"
                app:spn_arrowSwitchMode="true"
                app:spn_labelTextColor="@color/metro_yellow"
                app:spn_arrowAnimDuration="@android:integer/config_shortAnimTime"
                app:spn_popupItemAnimOffset="60"
                app:spn_label="@string/car_type"
                app:spn_arrowInterpolator="@android:anim/decelerate_interpolator"
                app:spn_popupItemAnimation="@anim/abc_grow_fade_in_from_bottom"
                app:rd_style="@style/Material.Drawable.Ripple.Wave"
                android:dropDownWidth="match_parent"/>

            <com.rey.material.widget.Spinner
                android:id="@+id/spnrMode"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/dp_ten"
                android:layout_height="wrap_content"
                app:spn_arrowColor="@color/metro_yellow"
                app:spn_labelEnable="true"
                app:spn_arrowSize="@dimen/dp_ten"
                app:spn_arrowPadding="@dimen/sp_ten"
                app:spn_arrowSwitchMode="true"
                app:spn_labelTextColor="@color/metro_yellow"
                app:spn_arrowAnimDuration="@android:integer/config_shortAnimTime"
                app:spn_popupItemAnimOffset="60"
                app:spn_label="@string/car_mode"
                app:spn_arrowInterpolator="@android:anim/decelerate_interpolator"
                app:spn_popupItemAnimation="@anim/abc_grow_fade_in_from_bottom"
                app:rd_style="@style/Material.Drawable.Ripple.Wave"
                android:dropDownWidth="match_parent"/>

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_forty"
                android:layout_marginTop="@dimen/dp_twenty"
                app:elevation="@dimen/dp_five"
                app:fab_backgroundColor="@color/metro_yellow"
                app:fab_iconSrc="@drawable/next" />


        </LinearLayout>

    </ScrollView>
</LinearLayout>