<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_body"
    android:orientation="vertical">

    <include layout="@layout/header" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_fifty"
        android:layout_marginRight="@dimen/dp_fifty"
        android:layout_marginTop="@dimen/dp_seventy"
        android:background="@drawable/mayri_logo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_twenty"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/menu_reservation"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/yellow"
            android:textStyle="bold|italic" />

        <RadioGroup
            android:id="@+id/pick_car"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:id="@+id/rbPickUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:buttonTint="@color/metro_yellow"
                android:text="@string/pick_up_drop_off"
                android:textColor="@android:color/white" />

            <RadioButton
                android:id="@+id/rbCarHire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/car_hire"
                android:buttonTint="@color/metro_yellow"
                android:textColor="@android:color/white" />
        </RadioGroup>

        <com.rey.material.widget.Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_booking"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_ten"
            android:layout_marginLeft="@dimen/dp_ten"
            android:layout_marginRight="@dimen/dp_ten"
            android:background="@color/metro_yellow"
            android:textColor="@android:color/black"
            app:rd_rippleType="touch"
            app:rd_maxRippleRadius="match_view"
            app:rd_enable="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dp_ten"
        android:layout_marginRight="@dimen/dp_ten"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="140dp"
            android:background="@drawable/car" />

    </LinearLayout>

</RelativeLayout>